--- a/homesemnada.html
+++ b/homesemnada.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ascender</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styledahomesemnada.css">
+
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500&family=Poppins:wght@500;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
     
@@ -18,7 +20,6 @@
 
         <div class="log">
             <a class="loginbo" href="login.html"><button>LOGIN</button></a>
-            <img class="perfil" src="img/Design_sem_nome__2_-removebg-preview.png" alt="perfil icone">
         </div>
     </header>
 
@@ -58,7 +59,7 @@
             </div>
 
             <div class="card2">
-                <a href=""><img class="peso" src="img/TAG__5_-removebg-preview.png" alt="pesos de academia icone">
+                <a href="tabelamodali.html"><img class="peso" src="img/TAG__5_-removebg-preview.png" alt="pesos de academia icone">
                 <h4>VENHA TER UMA EXPERIÊNCIA INCRÍVEL CONOSCO!</h4></a>
             </div>
 
