ATUALIZAÇÃO 23/09, QUASE CERTO

--- a/cadastro.html
+++ b/cadastro.html
@@ -4,7 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>cadastro - Ascender</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="static/CADASTRO.CSS">
+
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500&family=Poppins:wght@500;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
 
@@ -18,14 +20,14 @@
       <a href="#">Painel</a>
     </nav>
     <div class="perfil">
-      <img src="https://img.icons8.com/ios-glyphs/30/user--v1.png" alt="Usuário">
+      <img src="img/perfil.png" alt="Usuário">
     </div>
   </header>
 
   <!-- MAIN -->
   <main >
     <section class="intro">
-      <h2>Faça parte da nossa da nossa equipe!</h2>
+      <h2>Faça parte da <br> nossa equipe!</h2>
       <p>Crie sua conta e dê o<br> 
         primeiro passo rumo a  <br> 
         mais energia, força e <br>
@@ -54,9 +56,9 @@
             <p style="font-size: 15px;"><a href="#">VENHA FAZER PARTE</a></p>
 
             <div class="redes-sociais">
-                <img src="img/TAG-removebg-preview.png" alt="Instagram">
-                <img src="img/TAG__1_-removebg-preview.png" alt="Facebook">
-                <img src="img/TAG__2_-removebg-preview.png" alt="Twitter/X">
+                <img src="TAG-removebg-preview.png" alt="Instagram">
+                <img src="TAG__1_-removebg-preview.png" alt="Facebook">
+                <img src="TAG__2_-removebg-preview.png" alt="Twitter/X">
             </div>
         </div>
 
