--- a/homesemnada.html
+++ b/homesemnada.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ascender</title>
-    <link rel="stylesheet" href="styledahomesemnada.css">
+    <link rel="stylesheet" href="static/styledahomesemnada.css">
 
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500&family=Poppins:wght@500;600;700&display=swap" rel="stylesheet">
 </head>
@@ -12,7 +12,7 @@
     
 
     <header class="cabeca">
-        <img class="navlo" src="img/logo.png.jpg" alt="logo da Ascender">
+        <img class="navlo" src="img/logo-ascender.jpg" alt="logo da Ascender">
         <nav class="nave">
             <a style="font-size: 20px;" class="sobreepai" href="home2.html">Sobre</a>
             <a style="font-size: 20px;" class="sobreepai" href="dashboard.html">Painel</a>
@@ -36,7 +36,7 @@
                 <a class="quero" href="cards"><button>Quero conhecer</button></a>
             </div>
         </div>
-           <img class="logoquem" src="img/logo.png.jpg" alt="logo da Ascender">
+           <img class="logoquem" src="img/logo-ascender.jpg" alt="logo da Ascender">
 
         </section>
 
@@ -54,17 +54,17 @@
 
         <section class="cards">
             <div class="card1">
-                <a href=""> <img style="align-items: center;" class="calen" src="img/TAG__4_-removebg-preview.png" alt="calendário icone relógio">
+                <a href=""> <img style="align-items: center;" class="calen" src="img/calendario-icone.png" alt="calendário icone relógio">
                 <h4>VEJA  A NOSSA GRADE DE HORÁRIOS</h4></a>
             </div>
 
             <div class="card2">
-                <a href="tabelamodali.html"><img class="peso" src="img/TAG__5_-removebg-preview.png" alt="pesos de academia icone">
+                <a href="tabelamodali.html"><img class="peso" src="img/pesos-icone.png" alt="pesos de academia icone">
                 <h4>VENHA TER UMA EXPERIÊNCIA INCRÍVEL CONOSCO!</h4></a>
             </div>
 
             <div class="card3">
-                <a href=""> <img class="equi" src="img/TAG__6_-removebg-preview.png" alt="três pessoas juntas icone">
+                <a href=""> <img class="equi" src="img/equipe-icone.png" alt="três pessoas juntas icone">
                 <h4 style="text-decoration: none;">É PROFESSOR? ENTRE PARA NOSSA EQUIPE!</h4></a>
             </div>
         </section>
@@ -78,9 +78,9 @@
             <p style="font-size: 15px;"><a href="#">VENHA FAZER PARTE</a></p>
 
             <div class="redes-sociais">
-                <img src="img/TAG-removebg-preview.png" alt="Instagram">
-                <img src="img/TAG__1_-removebg-preview.png" alt="Facebook">
-                <img src="img/TAG__2_-removebg-preview.png" alt="Twitter/X">
+                <img src="img/instagram.png" alt="Instagram">
+                <img src="img/facebook.png" alt="Facebook">
+                <img src="img/twitter.png" alt="Twitter/X">
             </div>
         </div>
 
