--- a/cadastremodalidade.html
+++ b/cadastremodalidade.html
@@ -4,35 +4,42 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cadastre as modalidades</title>
+
+    <link rel="stylesheet" href="static/CADASTRARMODALIDADE.CSS">
+
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500&family=Poppins:wght@500;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
-        <img src="img/logo-ascender.jpg" alt="Ascender Logo">
-        <nav>
-            <a href="#">Sobre</a>
-            <a href="#">Painel</a>
-        </nav>
-        <div class=""></div>
-            <img src="img/perfil.png" alt="Usuário">
-    </header>
+  <div class="logo">
+    <img src="img/logo-ascender.jpg" alt="Ascender Logo">
+  </div>
+
+  <nav>
+    <a href="#">Sobre</a>
+    <a href="#">Painel</a>
+  </nav>
+
+  <div class="user">
+    <img src="img/perfil.png" alt="Usuário">
+  </div>
+</header>
+
 
     <div class="container">
         <div class="form-container">
             <h2>Cadastre a modalidade</h2>
             <form>
-                <label for="nome">Tipo:</label>
                 <input type="text" id="nome" placeholder="Digite o tipo da modalidade">
 
-                <label for="descricao">Professor:</label>
                 <input type="text" id="descricao" placeholder="Digite o nome do professor">
 
-                <label for="descricao">Capacidade:</label>
                 <input type="text" id="descricao" placeholder="Digite a capacidade da modalidade">
                 <button type="submit" class="register-btn">Cadastrar</button>
             </form>
         </div>
         <div class="text-container">
-            <p>Cadastre novas modalidades para oferecer mais opções aos alunos.</p>
+            <p>Use e abuse de todas as nossas modalidades!</p>
         </div>
     </div>
     <footer style="max-width: 100%;" class="rodape">
@@ -43,9 +50,9 @@
             <p style="font-size: 15px;"><a href="#">VENHA FAZER PARTE</a></p>
 
             <div class="redes-sociais">
-                <img src="img/TAG-removebg-preview.png" alt="Instagram">
-                <img src="img/TAG__1_-removebg-preview.png" alt="Facebook">
-                <img src="img/TAG__2_-removebg-preview.png" alt="Twitter/X">
+                <img src="img/instagram.png" alt="Instagram">
+                <img src="img/facebook.png" alt="Facebook">
+                <img src="img/twitter.png" alt="Twitter/X">
             </div>
         </div>
 
