--- a/login.html
+++ b/login.html
@@ -4,7 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Login - Ascender</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="static/LOGIN.CSS">
+
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500&family=Poppins:wght@500;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
 
@@ -38,7 +40,7 @@
         <input type="password" placeholder="Insira sua senha" required>
         <button type="submit">Concluído</button>
       </form>
-      <p class="cadastro">Não possui uma conta? <a href="#"><br>Crie agora</a></p>
+      <p class="cadastro">Não possui uma conta? <a href="cadastro.html"><br>Crie agora</a></p>
     </section>
   </main>
 
@@ -50,9 +52,9 @@
             <p style="font-size: 15px;"><a href="#">VENHA FAZER PARTE</a></p>
 
             <div class="redes-sociais">
-                <img src="img/TAG-removebg-preview.png" alt="Instagram">
-                <img src="img/TAG__1_-removebg-preview.png" alt="Facebook">
-                <img src="img/TAG__2_-removebg-preview.png" alt="Twitter/X">
+                <img src="img/instagram.png" alt="Instagram">
+                <img src="img/facebook.png" alt="Facebook">
+                <img src="img/twitter.png" alt="Twitter/X">
             </div>
         </div>
 
