--- a/tabelaaulas.html
+++ b/tabelaaulas.html
@@ -1,97 +1,81 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Painel - Tabela de Aulas</title>
-  <link rel="stylesheet" href="style.css">
-  <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500&family=Poppins:wght@500;600;700&display=swap" rel="stylesheet">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Tabela de alunos</title>
+
+    <link rel="stylesheet" href="static/TABELAAULAS.CSS">
+
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500&family=Poppins:wght@500;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
-  <!-- Header -->
-  <header>
+
+    <header>
     <div class="logo">
-      <img src="img/logo-ascender.jpg" alt="Logo Ascender">
+      <img src="img/logo-ascender.jpg" alt="Logo" style="height:40px;">
     </div>
-    <nav>
+    <nav class="menu">
       <a href="#">Sobre</a>
       <a href="#">Painel</a>
     </nav>
-    <div class="perfil">
-      <img src="perfil.png" alt="Perfil">
-    </div>
+    <div class="perfil"><img src="img/perfil.png" alt=""></div>
   </header>
 
   <!-- Conteúdo -->
-  <main class="dashboard">
-    <h2 class="titulo-tabela">TABELA DE AULAS</h2>
-
-    <table class="tabela-aulas">
-      <thead>
-        <tr>
-          <th>Modalidade</th>
-          <th>Horário</th>
-          <th>Professor</th>
-          <th></th>
-        </tr>
-      </thead>
+  <main>
+    <h1>TABELA DE AULAS</h1>
+    <table>
       <tbody>
         <tr>
-          <td>Musculação</td>
-          <td>08:00</td>
-          <td>João Silva</td>
-          <td><button>Inscrever</button></td>
+          <td>xxxxxx</td>
+          <td><button class="btn-editar">Editar</button></td>
         </tr>
         <tr>
-          <td>Pilates</td>
-          <td>09:30</td>
-          <td>Maria Souza</td>
-          <td><button>Inscrever</button></td>
+          <td>xxxxxx</td>
+          <td><button class="btn-editar">Editar</button></td>
         </tr>
         <tr>
-          <td>Yoga</td>
-          <td>11:00</td>
-          <td>Ana Costa</td>
-          <td><button>Inscrever</button></td>
+          <td>xxxxxx</td>
+          <td><button class="btn-editar">Editar</button></td>
         </tr>
         <tr>
-          <td>Crossfit</td>
-          <td>14:00</td>
-          <td>Paulo Mendes</td>
-          <td><button>Inscrever</button></td>
+          <td>xxxxxx</td>
+          <td><button class="btn-editar">Editar</button></td>
         </tr>
         <tr>
-          <td>Funcional</td>
-          <td>16:00</td>
-          <td>Lucas Oliveira</td>
-          <td><button>Inscrever</button></td>
+          <td>xxxxxx</td>
+          <td><button class="btn-editar">Editar</button></td>
+        </tr>
+        <tr>
+          <td>xxxxxx</td>
+          <td><button class="btn-editar">Editar</button></td>
         </tr>
       </tbody>
     </table>
   </main>
 
-  <footer style="max-width: 100%;" class="rodape">
+  <!-- Rodapé -->
+  <footer>
     <div class="conteudo-rodape">
-        <div class="coluna-esquerda">
-            <h3 style="font-size: 30px;">ASCENDER</h3>
-            <p style="font-size: 15px;"><a href="#">SOBRE NÓS</a></p>
-            <p style="font-size: 15px;"><a href="#">VENHA FAZER PARTE</a></p>
-
-            <div class="redes-sociais">
-                <img src="img/TAG-removebg-preview.png" alt="Instagram">
-                <img src="img/TAG__1_-removebg-preview.png" alt="Facebook">
-                <img src="img/TAG__2_-removebg-preview.png" alt="Twitter/X">
-            </div>
+      <div class="coluna-esquerda">
+        <h3>ASCENDER</h3>
+        <a href="#">SOBRE NÓS</a>
+        <a href="#">VENHA FAZER PARTE</a>
+        <a href="#">CONHEÇA NOSSOS RECURSOS</a>
+        <div class="redes-sociais">
+          <img src="instagram.png" alt="Instagram">
+          <img src="facebook.png" alt="Facebook">
+          <img src="twitter.png" alt="Twitter">
         </div>
-
-        <div class="coluna-direita">
-            <p style="font-size: 20px;">Rua das Acácias, 123</p>
-            <p style="font-size: 20px;">Bairro Jardim Primavera</p>
-            <p style="font-size: 20px;">São Paulo - SP</p>
-            <p style="font-size: 20px;">CEP: 01234-567</p>
-        </div>
+      </div>
+      <div class="coluna-direita">
+        <p>Rua das Acácias, 123</p>
+        <p>Bairro Jardim Primavera</p>
+        <p>São Paulo - SP</p>
+        <p>CEP: 01234-567</p>
+      </div>
     </div>
-</footer>
+  </footer>
+
 </body>
-</html>
