--- a/tabelaprofessor.html
+++ b/tabelaprofessor.html
@@ -3,81 +3,79 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tabela de professores</title>
+    <title>Tabela de alunos</title>
+
+    <link rel="stylesheet" href="static/TABELAPROF.CSS">
+
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500&family=Poppins:wght@500;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
+
     <header>
-        <img src="img/logo-ascender.jpg" alt="Ascender Logo">
-        <nav>
-            <a href="#">Sobre</a>
-            <a href="#">Painel</a>
-        </nav>
-        <div class=""></div>
-            <img src="img/perfil.png" alt="Usuário">
-    </header>
-    <div class="container">
-        <div class="table-container">
-            <h2>Lista de Professores</h2>
-            <table>
-                <thead>
-                    <tr>
-                        <th>Nome</th>
-                        <th>CPF</th>
-                        <th>Modalidade</th>
-                        <th>Telefone</th>
-                        <th>Ações</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>João Silva</td>
-                        <td>123.456.789-00</td>
-                        <td>Spininng</td>
-                        <td>(11) 91234-5678</td>
-                        <td>
-                            <button class="edit-btn">Editar</button>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>Maria Oliveira</td>
-                        <td>987.654.321-00</td>
-                        <td>Pilates</td>
-                        <td>(21) 99876-5432</td>
-                        <td>
-                            <button class="edit-btn">Editar</button>
-                        </td>
-                    </tr>
-                    <!-- Adicione mais linhas conforme necessário -->
-                </tbody>
-            </table>
-        </div>
-
-        <div class="text-container">
-            <p>Gerencie os professores cadastrados na plataforma.</p>
-        </div>
+    <div class="logo">
+      <img src="img/logo-ascender.jpg" alt="Logo" style="height:40px;">
     </div>
-    <footer style="max-width: 100%;" class="rodape">
+    <nav class="menu">
+      <a href="#">Sobre</a>
+      <a href="#">Painel</a>
+    </nav>
+    <div class="perfil"><img src="img/perfil.png" alt=""></div>
+  </header>
+
+  <!-- Conteúdo -->
+  <main>
+    <h1>TABELA DE AULAS</h1>
+    <table>
+      <tbody>
+        <tr>
+          <td>xxxxxx</td>
+          <td><button class="btn-editar">Editar</button></td>
+        </tr>
+        <tr>
+          <td>xxxxxx</td>
+          <td><button class="btn-editar">Editar</button></td>
+        </tr>
+        <tr>
+          <td>xxxxxx</td>
+          <td><button class="btn-editar">Editar</button></td>
+        </tr>
+        <tr>
+          <td>xxxxxx</td>
+          <td><button class="btn-editar">Editar</button></td>
+        </tr>
+        <tr>
+          <td>xxxxxx</td>
+          <td><button class="btn-editar">Editar</button></td>
+        </tr>
+        <tr>
+          <td>xxxxxx</td>
+          <td><button class="btn-editar">Editar</button></td>
+        </tr>
+      </tbody>
+    </table>
+  </main>
+
+  <!-- Rodapé -->
+  <footer>
     <div class="conteudo-rodape">
-        <div class="coluna-esquerda">
-            <h3 style="font-size: 30px;">ASCENDER</h3>
-            <p style="font-size: 15px;"><a href="#">SOBRE NÓS</a></p>
-            <p style="font-size: 15px;"><a href="#">VENHA FAZER PARTE</a></p>
-
-            <div class="redes-sociais">
-                <img src="img/TAG-removebg-preview.png" alt="Instagram">
-                <img src="img/TAG__1_-removebg-preview.png" alt="Facebook">
-                <img src="img/TAG__2_-removebg-preview.png" alt="Twitter/X">
-            </div>
+      <div class="coluna-esquerda">
+        <h3>ASCENDER</h3>
+        <a href="#">SOBRE NÓS</a>
+        <a href="#">VENHA FAZER PARTE</a>
+        <a href="#">CONHEÇA NOSSOS RECURSOS</a>
+        <div class="redes-sociais">
+          <img src="instagram.png" alt="Instagram">
+          <img src="facebook.png" alt="Facebook">
+          <img src="twitter.png" alt="Twitter">
         </div>
-
-        <div class="coluna-direita">
-            <p style="font-size: 20px;">Rua das Acácias, 123</p>
-            <p style="font-size: 20px;">Bairro Jardim Primavera</p>
-            <p style="font-size: 20px;">São Paulo - SP</p>
-            <p style="font-size: 20px;">CEP: 01234-567</p>
-        </div>
+      </div>
+      <div class="coluna-direita">
+        <p>Rua das Acácias, 123</p>
+        <p>Bairro Jardim Primavera</p>
+        <p>São Paulo - SP</p>
+        <p>CEP: 01234-567</p>
+      </div>
     </div>
-</footer>
-    
+  </footer>
+
 </body>
-</html>
