--- a/cadastro.html
+++ b/cadastro.html
@@ -16,12 +16,8 @@
       <img src="img/logo-ascender.jpg" alt="Ascender Logo">
     </div>
     <nav>
-      <a href="#">Sobre</a>
-      <a href="#">Painel</a>
+      <a href="homesemnada.html">Sobre</a>
     </nav>
-    <div class="perfil">
-      <img src="img/perfil.png" alt="Usuário">
-    </div>
   </header>
 
   <!-- MAIN -->
@@ -43,7 +39,7 @@
         <input type="telefone" placeholder="Insira seu telefone" required>
         <input type="password" placeholder="Crie uma senha" required>
         <input type="password" placeholder="Confirme sua senha" required>
-        <button type="submit">Concluído</button>
+        <button type="submit"><a href="dashboardaluno.html"></a>Concluído</button>
       </form>
     </section>
   </main>
@@ -52,8 +48,7 @@
     <div class="conteudo-rodape">
         <div class="coluna-esquerda">
             <h3 style="font-size: 30px;">ASCENDER</h3>
-            <p style="font-size: 15px;"><a href="#">SOBRE NÓS</a></p>
-            <p style="font-size: 15px;"><a href="#">VENHA FAZER PARTE</a></p>
+            <p style="font-size: 15px;"><a href="homesemnada.html">SOBRE NÓS</a></p>
 
             <div class="redes-sociais">
                 <img src="TAG-removebg-preview.png" alt="Instagram">
