--- a/dashboardadm.html
+++ b/dashboardadm.html
@@ -29,20 +29,20 @@
         <!-- Seção de aulas -->
         <section>
             <h2>Aulas</h2>
-            <a href="/">+ Cadastrar aula</a>
+            <a href="cadastraraula.html">+ Cadastrar aula</a>
 
             <!-- Exemplo de aula inscrita -->
             <div>
                 <h3>Editar info</h3>
                 <p>Total : 12</p>
-                <a href="/cancelar/1">Excluir inscrição</a>
+                <a href="exluirincricao.html">Excluir inscrição</a>
             </div>
         </section>
 
         <!-- seção de alunos -->
         <section>
             <h2>Alunos</h2>
-            <a href="/cadastraraula">+ Cadastrar aluno</a>
+            <a href="cadastro.html">+ Cadastrar aluno</a>
 
             
             <div>
