--- a/dashboardaluno.html
+++ b/dashboardaluno.html
@@ -19,8 +19,8 @@
 
   <!-- Navegação -->
   <nav>
-    <a href="/sobre">Sobre</a>
-    <a href="/painel">Painel</a>
+    <a href="homesemnada.html">Sobre</a>
+    <a href="dashboardaluno.html">Painel</a>
   </nav>
 
   <!-- Ícone de perfil -->
@@ -35,17 +35,17 @@
         <section>
             <div class="caixa">
                 <h2>Minhas aulas</h2>
-            <a href="/inscrever">+ Inscreva-se</a>
+            <a href="tabelaaulas.html">+ Inscreva-se</a>
             <div>
                 <h3>Spinning</h3>
                 <p>12/09 - 19h</p>
-                <a href="/cancelar/1">Excluir inscrição</a>
+                <a href="excluirinscricao.html">Excluir inscrição</a>
             </div>
             </div>
         </section>
 
         <div>
-            <a href="/editar_aluno">Editar aluno</a>
+            <a href="editaraluno.html">Editar aluno</a>
         </div>
     </main>
 
