--- a/login.html
+++ b/login.html
@@ -16,8 +16,7 @@
       <img src="img/logo-ascender.jpg" alt="Ascender Logo">
     </div>
     <nav>
-      <a href="#">Sobre</a>
-      <a href="#">Painel</a>
+      <a href="homesemnada.html">Sobre</a>
     </nav>
     <div class="perfil">
       <img src="img/perfil.png" alt="Usuário">
