--- a/tabelaaulas.html
+++ b/tabelaaulas.html
@@ -16,8 +16,8 @@
       <img src="img/logo-ascender.jpg" alt="Logo" style="height:40px;">
     </div>
     <nav class="menu">
-      <a href="#">Sobre</a>
-      <a href="#">Painel</a>
+      <a href="homesemnada.html">Sobre</a>
+      <a href="dashboardaluno.html">Painel</a>
     </nav>
     <div class="perfil"><img src="img/perfil.png" alt=""></div>
   </header>
@@ -28,28 +28,28 @@
     <table>
       <tbody>
         <tr>
-          <td>xxxxxx</td>
-          <td><button class="btn-editar">Editar</button></td>
+          <td>Muay-Thay</td>
+          <td><button class="btn-editar"><a href="esgotou.html">Inscrever</a></button></td>
         </tr>
         <tr>
-          <td>xxxxxx</td>
-          <td><button class="btn-editar">Editar</button></td>
+          <td>Musculação</td>
+          <td><button class="btn-editar">Inscrever</button></td>
         </tr>
         <tr>
-          <td>xxxxxx</td>
-          <td><button class="btn-editar">Editar</button></td>
+          <td>Spinning</td>
+          <td><button class="btn-editar">Inscrever</button></td>
         </tr>
         <tr>
-          <td>xxxxxx</td>
-          <td><button class="btn-editar">Editar</button></td>
+          <td>Yoga</td>
+          <td><button class="btn-editar">Inscrever</button></td>
         </tr>
         <tr>
-          <td>xxxxxx</td>
-          <td><button class="btn-editar">Editar</button></td>
+          <td>Zumba</td>
+          <td><button class="btn-editar">Inscrever</button></td>
         </tr>
         <tr>
-          <td>xxxxxx</td>
-          <td><button class="btn-editar">Editar</button></td>
+          <td>Natação</td>
+          <td><button class="btn-editar">Inscrever</button></td>
         </tr>
       </tbody>
     </table>
