--- a/editaraluno.html
+++ b/editaraluno.html
@@ -38,7 +38,7 @@
 
                 <div class="buttons">
                     <button type="submit" class="save-btn">Salvar</button>
-                    <button type="button" class="delete-btn">Excluir</button>
+                    <button type="button" class="delete-btn"><a href="dashboardaluno.html"></a>Cancelar</button>
                 </div>
             </form>
         </div>
